--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "dompurify": "^2.2.8",
+    "dotenv": "^16.3.1",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "jsdom": "^16.5.3",
